--- a/tex/tiivistelma.tex
+++ b/tex/tiivistelma.tex
@@ -1,11 +1,7 @@
-Aurinkosähköjärjestelmien ja lämpöpumppujen merkitys Suomen sähköverkossa kasvaa niiden määrän lisääntyessä. Niillä on useita eri rajapintoja, joiden hyödyntämisellä voidaan ehkäistä lisääntyneen määrän tuomia ongelmia sähköverkon kannalta. Toisaalta rajapintojen hyödyntäminen tuo myös järjestelmien omistajille hyötyä, kun niiden avulla voidaan tuoda säästöjä energiankulutuksen tai aurinkosähkön hyödyntämisen osalta.
+Aurinkosähköjärjestelmien ja lämpöpumppujen määrän kasvaessa niiden merkitys Suomen sähköverkossa kasvaa. Niillä on useita eri rajapintoja, joiden hyödyntämisellä voidaan ehkäistä kasvaneen määrän tuomia ongelmia sähköverkolle. Toisaalta rajapintojen hyödyntäminen hyödyttää myös järjestelmien omistajia, koska niiden avulla voidaan luoda säästöä energiankulutuksen tai aurinkosähkön hyödyntämisen osalta. Työn tarkoituksena tarkastella millaisia rajapintoja aurinkosähköjärjestelmillä ja lämpöpumpuilla on, millaisia tarpeita eri sidosryhmillä on rajapintojen osalta sekä millaisia sovelluksia rajapinnoille on.
 
-Työn tarkoituksena on esitellä yleisimpiä kommunikaatiorajapintoja ja niitä hyödyntäviä sovelluksia, sekä tarkastella millaisia tarpeita eri sidosryhmillä on rajapintojen osalta. Työn painopiste on sidosryhmien ja sovellusten kohdalla, sillä niissä on hyödyntämismahdollisuuksien kannalta asioita, jotka ovat vasta tulossa laajemmin käyttöön Suomessa. 
+Lämpöpumppujen osalta SG-Ready -rajapinta on kehitetty useiden lämpöpumppujen ohjausta varten virtuaalivoimalan tavoin. Sitä voidaan ohjata esimerkiksi Modbus-väylän kautta ja tätä väylää hyödyntävät myös aurinkoinvertterit, tosin omalla SunSpec Modbus -sovellustason toteutuksella. Aurinkoinverttereitä voidaan myös ohjata IEC 61850 ja IEEE 1815 sähköasemastandardien mukaisella kommunikaatiolla, vaikka näitä ei oikeastaan ole vielä nykyisissä inverttereissä käytössä. Myös AMI-mittareita voidaan hyödyntää näiden laitteiden etäohjauksessa, mutta niiden toiminta rajoittuu pääosin releohjaukseen. 
 
-Lämpöpumppujen osalta SG--Ready-rajapinta on kehitetty useiden lämpöpumppujen ohjausta varten virtuaalivoimalan tavoin. Sitä voidaan ohjata esimerkiksi Modbus-väylän kautta ja tätä väylää hyödyntävät myös aurinkoinvertterit, tosin omalla SunSpec Modbus -sovellustason toteutuksella. Aurinkoinverttereitä voidaan myös ohjata IEC 61850 ja IEEE 1815 sähköasemastandardien mukaisella kommunikaatiolla, mutta näitä ei oikeastaan ole vielä nykyisissä inverttereissä käytössä. Myös AMI-mittareita voidaan hyödyntää näiden laitteiden etäohjauksessa, mutta sen toiminta rajoittuu pääosin releohjaukseen.
+Sidosryhmillä on useita tarpeita. Osa sidosryhmistä hyödyntää samoja sovelluksia eri käyttötarkoituksiin, mistä hyvänä esimerkkinä on etämonitorointi: omistaja voi tarkastella tuottohistoriaa tai järjestelmän toimintaa reaaliaikaisesti, kun taas valmistaja voi hyödyntää sitä esimerkiksi huoltopalveluiden tarjoamiseen heti vikatilan havaittuaan. Sidosryhmät voivat olla myös tiukasti sidoksissa toistensa kanssa, sillä kiinteistön voidaan ajatella olevan välillinen sidosryhmä omistajan ja laitteiston välillä esimerkiksi ajaen omistajan etua energiansäästön osalta. Aggregaatille taas rajapintojen hyödyntäminen on sen ydinliiketoimintaa, mikäli se ohjaa pienkuluttajien laitteista muodostettua virtuaalivoimalaa.
 
-Eri sidosryhmillä on useita tarpeita, joista osa hyödyntää samoja sovelluksia eri käyttötarkoituksiin. Tästä hyvänä esimerkkinä etämonitorointi; omistaja voi tarkastella tuottohistoriaa tai järjestelmän toimintaa reaaliaikaisesti, kun taas valmistaja voi hyödyntää tätä esimerkiksi huoltopalveluiden tarjoamiseen heti vikatilan havaittua. Sidosryhmät voivat olla myös hyvin sidoksissa toistensa kanssa, sillä kiinteistön voidaan ajatella olevan välillinen sidosryhmä omistajan ja laitteiston välillä ajaen omistajan etua, esimerkiksi energiansäästön osalta.
-
-Perinteiset sovellukset järjestelmien osalta ovat järjestelmän etämonitorointi, sillä omistaja haluaa usein seurata järjestelmän toimintaa etänä. Uusia, vasta laajempaan käyttöön tulossa olevia sovelluksia ovat taas kysyntäjouston toteuttaminen ja loistehon kompensointi. 
-
-Rajapintojen hyödyntämismahdollisuudet vaativat standardointia, jotta erilaisiin järjestelmiin voidaan helposti integroida uusia laitteita riippumatta valmistajasta. Tällöin voidaan myös kehittää laajempia kokonaisuuksia ohjaavia järjestelmiä, jolloin lämpöpumpuista ja aurinkoinverttereiden tuomat edut tehostuvat. Tällä tavoin voidaan vähentää esimerkiksi huipputehoa muuntopiirin sisällä, ja hyödyntää sähköverkon nykyistä kapasiteettia paremmin.
+Rajapintojen hyödyntämismahdollisuudet vaativat standardointia, jotta uusien sovellusten kehittäminen on mahdollista. Tällöin voidaan myös kehittää laajempia kokonaisuuksia ohjaavia järjestelmiä, jolloin lämpöpumpuista ja aurinkoinverttereistä saadut edut tehostuvat. Tällä tavoin voidaan esimerkiksi pienentää huipputehoa muuntopiirin sisällä ja hyödyntää sähköverkon nykyistä kapasiteettia paremmin.
