AMI-häröilyn korjaamista ja monta muuta pikkujuttua

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -240,7 +240,7 @@ edition = {Second edition.},
 isbn = {1-78539-112-7},
 keywords = {Power resources},
 language = {eng},
-publisher = {Elsevier Science & Technology},
+publisher = {Elsevier Science \& Technology},
 }
 
 @misc{mittariAsetus,
@@ -278,4 +278,13 @@ urldate = {2020-08-29}
   title   = {Verkkovaihtosuuntaajan Suuntaajasillan Optimointi},
   school  = {Tampereen Teknillinen Yliopisto},
   year    = {2012}
+}
+
+@techreport{NVEHAN,
+author      = {Lars Henrik Haug},
+institution = {Norges vassdrags- og energidirektorat},
+title       = {Kommunikasjonsløsninger for sanntidsdata av strømforbruket},
+url         = {http://publikasjoner.nve.no/rapport/2018/rapport2018_70.pdf},
+urldate     = {2020-09-13},
+type        = {raportti}
 }
