--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -122,3 +122,8 @@
   name={HAN},
   description={Home Area Network}
 }
+
+\newglossaryentry{8P8C}{
+  name={8P8C},
+  description={8 position 8 contact}
+}
