--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -54,7 +54,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
 \subsection{Huipputehon rajoittaminen}
 
-  Osa sähköenergiajärjestelmän kuluista ja päästöistä aiheutuu siirtoverkon rakentamisesta ja ylläpidosta. Rakennettaessa uutta yhteyttä, mitoitetaan sen kuormitettavuus eli sähkönsiirtokyky arvioidun mahdollisen huipputehon mukaan. Suurimman osan ajasta siirtojohdot ovat siis kuormitettuina huomattavasti mitoitustaan pienemmällä kuormalla.\marginpar{sähköverkot-kirja lähteeksi}
+  Osa sähköenergiajärjestelmän kuluista ja päästöistä aiheutuu siirtoverkon rakentamisesta ja ylläpidosta. Rakennettaessa uutta yhteyttä, mitoitetaan sen kuormitettavuus eli sähkönsiirtokyky arvioidun mahdollisen huipputehon mukaan. Suurimman osan ajasta siirtojohdot ovat siis kuormitettuina huomattavasti mitoitustaan pienemmällä kuormalla.
 
   Rajoittamalla johdolla syötetyn alueen huipputehoja, saatetaan välttää uusien yhteyksien rakentaminen. Siirtojohdolla tapahtuvat jännitehäviöt ovat myös suurimmillaan suurimman tehonkulutuksen aikana, joten rajoittamalla huipputehoja, pystytään alentamaan johdolla tapahtuvia häviöitä.
 
