--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 %\usepackage{bm}
 
 %%%%% Your commands.
-
+\usepackage{datetime} % vain versionumerointia varten, voi poistaa ennen lopullista
 %%%%% Glossary information.
 
 \loadglsentries[main]{tex/sanasto.tex}
@@ -105,7 +105,7 @@
 %%%%% Thesis information and title page.
 
 \title{Lämpöpumppujen ja aurinkosähköjärjestelmien kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}{Communication interfaces of heat pumps and PV-systems and their utilisation possibilities}
-\subtitle{Luonnos: versio 4}
+\subtitle{Luonnoksen aikaleima: \currenttime \par \today}
 
 % The author name.
 \author{Ilmari Marttila ja Niko Kangasniemi}
@@ -120,7 +120,7 @@
 \examiner{Prof. Sami Repo}
 
 % The finishing date of the thesis (YYYY-MM-DD).
-\finishdate{2020}{03}{29}
+\finishdate{0}{0}{0}
 
 
 \thesistype{Kandidaatintyö}
