--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -132,8 +132,8 @@
 
 @INPROCEEDINGS{DNP3Inv,
   author={K. {Prabakar} and A. {Singh} and C. {Tombari}},
-  booktitle={2019 IEEE 46th Photovoltaic Specialists Conference (PVSC)}, 
-  title={IEEE 1547-2018 Based Interoperable PV Inverter with Advanced Grid-Support Functions}, 
+  booktitle={2019 IEEE 46th Photovoltaic Specialists Conference (PVSC)},
+  title={IEEE 1547-2018 Based Interoperable PV Inverter with Advanced Grid-Support Functions},
   year={2019},
   volume={},
   number={},
@@ -148,13 +148,13 @@
   date		   = {2019-01-14},
 }
 
-@INPROCEEDINGS{61850funcs,  
+@INPROCEEDINGS{61850funcs,
 	author={T. {Miranda} and V. {Delgado-Gomes} and J. F. {Martins}},
-	booktitle={2018 International Conference on Intelligent Systems (IS)},   
-	title={On the use of IEC 61850-90-7 for Smart Inverters Integration},   
-	year={2018},  
-	volume={},  
-	number={},  
+	booktitle={2018 International Conference on Intelligent Systems (IS)},
+	title={On the use of IEC 61850-90-7 for Smart Inverters Integration},
+	year={2018},
+	volume={},
+	number={},
 	pages={722-726},
 }
 
@@ -174,7 +174,7 @@
 
 @misc{DNP3&61850,
 	author       = {Andrew West},
-	title        = {Integrating IEC 61850 & IEEE 1815 (DNP3)},
+	title        = {Integrating IEC 61850 \& IEEE 1815 (DNP3)},
 	urldate      = {2020-08-25},
 }
 
