--- a/tex/tiivistelma.tex
+++ b/tex/tiivistelma.tex
@@ -1,7 +1,5 @@
-Aurinkosähköjärjestelmien ja lämpöpumppujen määrän kasvaessa niiden merkitys Suomen sähköverkossa kasvaa. Niillä on useita eri rajapintoja, joiden hyödyntämisellä voidaan ehkäistä kasvaneen määrän tuomia ongelmia sähköverkolle. Toisaalta rajapintojen hyödyntäminen hyödyttää myös järjestelmien omistajia, koska niiden avulla voidaan luoda säästöä energiankulutuksen tai aurinkosähkön hyödyntämisen osalta. Työn tarkoituksena tarkastella millaisia rajapintoja aurinkosähköjärjestelmillä ja lämpöpumpuilla on, millaisia tarpeita eri sidosryhmillä on rajapintojen osalta sekä millaisia sovelluksia rajapinnoille on.
+Aurinkosähköjärjestelmien ja lämpöpumppujen määrän kasvaessa niiden merkitys Suomen sähköverkossa kasvaa. Niillä on useita eri rajapintoja, joiden hyödyntämisellä voidaan ehkäistä kasvaneen määrän tuomia ongelmia sähköverkolle. Toisaalta rajapintojen hyödyntäminen hyödyttää myös järjestelmien omistajia, koska niiden avulla voidaan luoda säästöä energiankulutuksen tai aurinkosähkön hyödyntämisen osalta. Työssä tarkastellaan millaisia rajapintoja aurinkosähköjärjestelmillä ja lämpöpumpuilla on, millaisia tarpeita eri sidosryhmillä on rajapintojen osalta sekä millaisia sovelluksia rajapinnoille on.
 
-Lämpöpumppujen osalta SG-Ready -rajapinta on kehitetty useiden lämpöpumppujen ohjausta varten virtuaalivoimalan tavoin. Sitä voidaan ohjata esimerkiksi Modbus-väylän kautta ja tätä väylää hyödyntävät myös aurinkoinvertterit, tosin omalla SunSpec Modbus -sovellustason toteutuksella. Aurinkoinverttereitä voidaan myös ohjata IEC 61850 ja IEEE 1815 sähköasemastandardien mukaisella kommunikaatiolla, vaikka näitä ei oikeastaan ole vielä nykyisissä inverttereissä käytössä. Myös AMI-mittareita voidaan hyödyntää näiden laitteiden etäohjauksessa, mutta niiden toiminta rajoittuu pääosin releohjaukseen. 
+Työn alussa käsitellään aurinkosähköjärjestelmien ja lämpöpumppujen teknistä toteutusta niiden ymmärtämiseksi, mutta pääpaino on kolmessa osa-alueessa: rajapinnoissa, sidosryhmissä ja sovelluksissa. Rajapinnoista syvemmin käsitellään Modbus-protokollaa, sillä sen käyttö on yleistä aurinkoinverttereissä ja lämpöpumpuissa. Lisäksi molemmille laitteille on tehty sovellustason rajapinnat, inverttereille SunSpec Modbus ja lämpöpumpuille SG-Ready. Sidosryhmien osalta tarkastellaan käytännön esimerkkien avulla, millaisia tarpeita sidosryhmillä voisi olla rajapinnoille, ja miten he voisivat hyödyntää näitä. Sovelluksista käydään läpi niin sähköverkkoa kuin yksittäistä kuluttajaakin hyödyttäviä sovelluksia, joista osa perustuu yksittäisen laitteen tarkasteluun ja osa taas useamman laitteen muodostamaan järjestelmään.
 
-Sidosryhmillä on useita tarpeita. Osa sidosryhmistä hyödyntää samoja sovelluksia eri käyttötarkoituksiin, mistä hyvänä esimerkkinä on etämonitorointi: omistaja voi tarkastella tuottohistoriaa tai järjestelmän toimintaa reaaliaikaisesti, kun taas valmistaja voi hyödyntää sitä esimerkiksi huoltopalveluiden tarjoamiseen heti vikatilan havaittuaan. Sidosryhmät voivat olla myös tiukasti sidoksissa toistensa kanssa, sillä kiinteistön voidaan ajatella olevan välillinen sidosryhmä omistajan ja laitteiston välillä esimerkiksi ajaen omistajan etua energiansäästön osalta. Aggregaatille taas rajapintojen hyödyntäminen on sen ydinliiketoimintaa, mikäli se ohjaa pienkuluttajien laitteista muodostettua virtuaalivoimalaa.
-
-Rajapintojen hyödyntämismahdollisuudet vaativat standardointia, jotta uusien sovellusten kehittäminen on mahdollista. Tällöin voidaan myös kehittää laajempia kokonaisuuksia ohjaavia järjestelmiä, jolloin lämpöpumpuista ja aurinkoinverttereistä saadut edut tehostuvat. Tällä tavoin voidaan esimerkiksi pienentää huipputehoa muuntopiirin sisällä ja hyödyntää sähköverkon nykyistä kapasiteettia paremmin.
+Rajapintojen hyödyntämismahdollisuudet vaativat standardointia, jotta uusien sovellusten kehittäminen on mahdollista. Tällöin voidaan myös kehittää laajempia kokonaisuuksia ohjaavia järjestelmiä, jolloin lämpöpumpuista ja aurinkoinverttereistä saadut edut tehostuvat. Tällä tavoin voidaan esimerkiksi pienentää huipputehoa muuntopiirin sisällä ja hyödyntää sähköverkon nykyistä kapasiteettia paremmin. Vaikka teknisesti kaikki sovellukset ovat mahdollisia toteuttaa, nykyisillä järjestelmäkomponenteilla eri toimijoiden välinen viestintä on haastavaa, sillä yhteistä rajapintaa eri toimijoille ei ole esimerkiksi laitteiden etäohjaukseen, johon moni sovellus pohjautuu.  
