--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -43,7 +43,7 @@ Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai 
 
   \subsection{Protocol data unit}
 
-    Laitteissa toimivien sovellusten väliseen tiedonsiirtoon käytetään \gls{PDU}:ta (Application Data Unit), joka koostuu funktiokoodista ja operaatioon tarvittavasta datasta. \gls{PDU}:ita on kolmenlaisia, ja ne on esitetty taulukossa \ref{pdu}.
+    Laitteissa toimivien sovellusten väliseen tiedonsiirtoon käytetään \gls{PDU}:ta (Protocol Data Unit), joka koostuu funktiokoodista ja operaatioon tarvittavasta datasta. \gls{PDU}:ita on kolmenlaisia, ja ne on esitetty taulukossa \ref{pdu}.
     \begin{table}[h]
       \centering
       \caption[\gls{PDU}-tyypit.]{\gls{PDU}-tyypit. Perustuu lähteeseen \parencite{modbusAppSpec}.}
