Added info of usage of IEC, DNP3 and SunSpec

--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -217,3 +217,9 @@
 	urldate      = {2020-09-04},
 	date         = {2018-01-19},
 }
+
+@misc{Solarigo,
+	author       = {Ville Vairinen},
+	title        = {Sähköpostikeskustelu Solarigon Ville Vairisen kanssa 19.8.2020},
+	organization = {Solarigo Oy},
+}
