--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -119,17 +119,19 @@ Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai 
       \item ajastetut komennot \parencite{61850funcs}.
     \end{itemize}
 
-  Vaikka IEC 61850 ei ole vielä laajasti käytössä inverttereissä, esimerkiksi SMA\footnote{SMA Solar Technology AG -- System-, Mess- und Anlagentechnik} tarjoaa Italiassa toimiville inverttereille standardia hyödyntävän rajapinnan \parencite{SMAManual}. Tällä voidaan irrottaa tai kytkeä invertteri verkkoon, tai muuttaa invertterin taajuusrajoja. Italian CEI 0-21 -standardissa vaaditaan inverttereille rajapinta verkonhaltijalle, jonka takia luultavasti tämä ominaisuus on SMA:n ohjekirjassa merkattu vain Italia -ominaisuudeksi. Tämän vaatimuksen\footnote{\url{http://blog.nettedautomation.com/2012/07/iec-61850-in-italy-sma-offers-iec-61850.html}} lähde ei ole alkuperäinen, joten tätä vaatimusta ei voitu vahvistaa varmaksi, tosin SMA:n erillinen ohjeistus Italian laitteille viittaa siihen.
+  IEC 61850 ei ole vielä laajasti käytössä inverttereissä, ja ainoa löydetty esimerkki sen käytöstä on SMA:n\footnote{SMA Solar Technology AG -- System-, Mess- und Anlagentechnik} tarjoama standardia hyödyntävä rajapinta Italiassa toimiville inverttereille \parencite{SMAManual}. Tällä voidaan irrottaa tai kytkeä invertteri verkkoon, tai muuttaa invertterin taajuusrajoja. Italian CEI 0-21 -standardissa vaaditaan inverttereille rajapinta verkonhaltijalle, jonka takia luultavasti tämä ominaisuus on SMA:n ohjekirjassa merkattu vain Italia -ominaisuudeksi. Tämän vaatimuksen\footnote{\url{http://blog.nettedautomation.com/2012/07/iec-61850-in-italy-sma-offers-iec-61850.html}} lähde ei ole alkuperäinen, joten tätä vaatimusta ei voitu vahvistaa varmaksi, tosin SMA:n erillinen ohjeistus Italian laitteille viittaa siihen.
 
 
 \section{SunSpec Modbus}
-  SunSpec Modbus on SunSpec Alliancen määrittelemä sovellustason toteutus, joka hyödyntää yleisesti käytössä olevaa Modbus-protokollaa. Sunspec Modbus sijoittuu rakenteellisesti Modbusin päälle, kuten taulukossa 4.3 kuvattiin. Fyysinen Modbus-rajapinta on sisäänrakennettu noin \SI{80}{\percent}:iin asennetuista hajautetun energiantuotannon laitteista, joten tämän toteutuksen tuominen suurelle määrälle laitteita on melko yksinkertaista \parencite{SSFactSheet}.
+  SunSpec Modbus on SunSpec Alliancen määrittelemä sovellustason toteutus, joka hyödyntää yleisesti käytössä olevaa Modbus-protokollaa. Sunspec Modbus sijoittuu rakenteellisesti Modbusin päälle, kuten taulukossa 4.3 kuvattiin. Fyysinen Modbus-rajapinta on sisäänrakennettu noin \SI{80}{\percent}:iin asennetuista hajautetun energiantuotannon laitteista, joten tämän toteutuksen tuominen suurelle määrälle laitteita on melko yksinkertaista \parencite{SSFactSheet}. 
 
   SunSpecin standardi on tehty huomioiden \gls{IEC} 61850 -standardi, mukaan lukien sen 90-7 ja 7-420 -laajennukset, jotka käsittelevät hajautetun energiantuotannon inverttereiden ja konverttereiden toiminnallisuuksia ja kommunikaatiorakennetta hajautetussa energiantuotannossa. SunSpec onkin toteuttanut edellä mainitut toiminnallisuudet myös omaan standardiinsa. Tämän tarkoituksena on helpottaa integraatiota \gls{IEC} 61850 -standardia hyödyntävien järjestelmien kanssa \parencite{SSTech}. Kuitenkaan SunSpec ei ole nimennyt tietomallin muuttujia täsmälleen samoilla nimillä, kuin 61850-standardi, joten ne eivät ole suoraan yhteensopivia keskenään.
 
   SunSpecin toteutuksessa on määritelty tietomalleja, joiden avulla eri valmistajien laitteita voidaan yhdistää samaan järjestelmään \parencite{SSTech}. Nämä tietomallit mahdollistavat laiteriippumattomuuden, sillä niissä on määritelty funktioiden toiminta ja niiden käyttö. Tällöin eri valmistajien laitteita voidaan lukea ja ohjata yhteisillä käskyillä järjestelmän sisällä.
 
   SunSpec Modbusin määrittelemät tietomallit ovat käytössä myös muilla protokollilla, kuten \gls{HTTP}/\gls{XML}:lla ja \gls{OPC}:lla \parencite{SSTech}. Koska lähes kaikki tieto SunSpecin standardista perustuu Modbus-protokollaan, muiden tiedonsiirtoprotokollien tarkastelu jätettiin pois. Tiedon puute johtuu mitä luultavimmin Modbusin hallitsevasta asemasta inverttereissä.
+
+  SunSpec-protokollan yleisyys selvisi sähköpostikeskustelussa aurinkosähköjärjestelmiä Suomessa asentavan yrityksen kanssa. Solarigo Oy on käyttänyt viiden eri valmistajan aurinkoinverttereitä eri projekteissa, mutta niistä useimmissa ei ole tarvittu etä- tai paikallista ohjausta. Mikäli paikallista ohjausta on käytetty, kommunikaatio on tapahtunut lähes poikkeuksetta RS-485 väylän kautta ja kaikissa tapauksissa SunSpecin protokollaan perustuen. Vaikka valmistajat ovat dokumentoineet miten protokollalla ohjataan niiden laitteita, käytännössä kuitenkaan kaikki ominaisuudet eivät ole toimineet kuten ne on määritelty. \parencite{Solarigo}
 
 
 \section{IEEE 1815 / Distributed Network Protocol 3}
@@ -139,7 +141,9 @@ Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai 
 
   IEEE 1815.1 -dokumentti määrittelee standardisoidun tavan linkittää yhteen data tämän ja IEC-standardin välillä \parencite{IEEE1815.1}. Tämä mahdollistaa IEC 61850-standardia käyttävien laitteiden lisäyksen IEEE 1815-protokollaiseen järjestelmään. Tämän on Pohjois-Amerikassa tärkeää, sillä siellä on laajasti käytössä IEEE 1815 standardi, mutta koska IEC 61850 on ominaisuuksiltaan laajempi, sen osuus tulee kasvamaan. Molempien standardien kanssa työskentelevä Bruce Muschlitz arveli vuonna 2009 DNP3:n häviävän keskinäisen kilpailun, sillä IEC 61850 täyttää kaikkien sidosryhmien tarpeet ominaisuuksien puolesta \parencite{DNPvsIEC}. Tosin näiden kahden standardin yhteensovittaminen on muuttanut tilannetta, eikä DNP3 tule välttämättä häviämään markkinoilta vielä pitkään aikaan. 2019 tehdyn kyselyn mukaan DNP3:a käytti 94\% kyselyyn vastanneista sähköntuotanto ja -jakeluyrityksistä Pohjois-Amerikassa, mutta IEC 61850:n osuus on kasvamassa \parencite{DNP3Study}.
 
-  Vuonna 2013 DNP3 julkaisi dokumentin, joka auttaa verkonhaltijoita kommunikoimaan hajautetun energiantuotannon kanssa. Tämä dokumentti kuvaa standardoidun rajapinnan datalle ja joukon protokollapalveluita ja profiileja. Dokumentin kuvaamien profiilien tarkoitus on helpottaa hajautetun energiantuotannon liittämistä DNP3 järjestelmiin. Vuonna 2018 dokumenttia päivitettiin siten, että se lisäksi sisältää toiminnallisten ominaisuuden määrittelyt protokollalle, sekä linkityksen IEC-61850-7-420 tietomallin kanssa. Näiden uudistusten myötä DNP3 protokollaa voidaan käyttää älyinverttereiden ohjaukseen samalla tavalla kuin SunSpeciä tai IEC 61850-standardia, mutta myös käyttää näitä kolmea protokollaa rinnakkain toistensa kanssa. \parencite{DNP3Inv, DNP3AppNote}
+  Vuonna 2013 IEEE julkaisi dokumentin, joka auttaa verkonhaltijoita kommunikoimaan hajautetun energiantuotannon kanssa. Tämä dokumentti kuvaa standardoidun rajapinnan datalle ja joukon protokollapalveluita ja profiileja. Dokumentin kuvaamien profiilien tarkoitus on helpottaa hajautetun energiantuotannon liittämistä DNP3 järjestelmiin. Vuonna 2018 dokumenttia päivitettiin siten, että se lisäksi sisältää toiminnallisten ominaisuuden määrittelyt protokollalle, sekä linkityksen IEC-61850-7-420 tietomallin kanssa. Näiden uudistusten myötä DNP3 protokollaa voidaan käyttää älyinverttereiden ohjaukseen samalla tavalla kuin SunSpeciä tai IEC 61850-standardia, mutta myös käyttää näitä kolmea protokollaa rinnakkain toistensa kanssa. \parencite{DNP3Inv, DNP3AppNote}
+
+  Vaikka DNP3 on standardoitu myös ohjaamaan aurinkoinverttereitä, valmistajat eivät ole ottaneet sitä käyttöön, ainakaan vielä. Sen toiminta on varmistettu tutkimuksissa, joissa on tehty testilaitteisto eri ohjaustoimintojen varmistamiseksi, mutta kaupallisista inverttereistä ei ole löytynyt mainintaa DNP3:n käytöstä. \parencite{DNP3inv}
 
 
 \section{Smart Grid -ready}
